--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook
+  name: guestbook-1
   namespace: default
 spec:
   destination:
@@ -16,3 +16,5 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - Validate=false   # Optional: Disable manifest validation during sync if needed
