--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook-1
+  name: guestb
   namespace: default
 spec:
   destination:
